JDK 9 compatibility